# Bob

./: .gitignore  BOB_LANGUAGE_REFERENCE.md  CMakeLists.txt  Makefile  README.md  ROADMAP.md  app.config  benchmark.py  bobby.bob  char_printer.bob  complex_test.bob  complexity_test.bob  config.txt  debug_extension_issue.bob  debug_generation.bob  final_regression_dynamic.bob  final_regression_test.bob  final_working_dynamic.bob  final_working_test.bob  fix_test.bob  fixed_regression_dynamic.bob  fixed_regression_test.bob  hello.txt  insane_regression_dynamic.bob  insane_regression_test.bob  mega_loader.bob  mega_loader_simple.bob  mega_regression_test.bob  minimal_working.bob  people.txt  proper_regression_dynamic.bob  proper_regression_test.bob  pseudo_oop_examples.bob  run_leak_tests.sh  simple.bob  simple_regression_dynamic.bob  source.bob  string_indexing_demo.bob  string_indexing_errors_test.bob  string_indexing_final_test.bob  (+47 more)
Reference/: BIGINT_AND_BITWISE.md  BOB_LANGUAGE_REFERENCE.md  BUILD.md  EMBEDDING.md  ROADMAP.md
bob-language-extension/: .gitignore  .vsix-version  INSTALLATION.md  README.md  bob-language-0.1.2.vsix  bob-language-0.2.0.vsix  bob-language-0.5.0.vsix  create-vsix.sh  example.bob  install.sh  language-configuration.json  package-lock.json  package-vsix.sh  package.json  reload-extension.sh  test-operators.bob  version-info.md
bob-language-extension/snippets/: bob.json
bob-language-extension/src/: extension.ts
bob-language-extension/syntaxes/: bob.tmLanguage.json
bob-language-extension/themes/: bob-dark.json
cjson_module/: CMakeLists.txt  manifest.json
cjson_module/include/: BobModuleSDK.h  ClassRegistry.h  FunctionRegistry.h  GMPWrapper.h  ModuleRegistry.h
cjson_module/source/: cjson_module.cpp
examples/: demo_features.bob
fun/: 3d.bob  3d_filled.bob  3d_matrix.bob  canvas.bob  debug_module.bob  demo.bob  matrix.bob  ppm.bob  simple_ppm_test.bob  simple_triangle.bob  test_ppm.bob
headers/: ASTPrinter.h  Environment.h  ErrorReporter.h  Expression.h  Interpreter.h  Lexer.h  Parser.h  Statement.h  StdLib.h  TypeWrapper.h  Value.h  bob.h  test.h
headers/helperFunctions/: HelperFunctions.h  ShortHands.h
leakTests/: README.md  leaktest_builtin.bob  leaktest_collections.bob  leaktest_functions.bob  leaktest_loops.bob  leaktest_mixed.bob
module_development/: test_performance_debug.bob
module_development/raylib_module/: CMakeLists.txt  manifest.json
module_development/raylib_module/include/: ExtensionRegistry.h  Interpreter.h  ModuleDef.h  ModuleRegistry.h  RuntimeDiagnostics.h  Value.h  ValuePool.h
module_development/raylib_module/include/helperFunctions/: ErrorUtils.h
module_development/raylib_module/source/: raylib_module.cpp
module_development/test_module/source/: test_module.cpp
source/: ASTPrinter.cpp  BobStdLib.cpp  Environment.cpp  ErrorReporter.cpp  Expression.cpp  Interpreter.cpp  Lexer.cpp  Parser.cpp  StdLib.cpp  StdLib.cpp.backup  StdLib.cpp.original  TypeWrapper.cpp  Value.cpp  bob.cpp  main.cpp
src/: Lexer.cpp  bob.cpp  test.cpp
src/headers/builtinModules/: base64_module.h  eval.h  io.h  json.h  math_module.h  os.h  path_module.h  rand.h  register.h  sys.h  terminal.h  time_module.h
src/headers/cli/: bob.h
src/headers/common/: LineEditor.h  LineReader.h
src/headers/common/helperFunctions/: HelperFunctions.h
src/headers/parsing/: ErrorReporter.h  Expression.h  Lexer.h  Parser.h  Statement.h
src/headers/runtime/: AssignmentUtils.h  ClassRegistry.h  CompiledBlock.h  CompiledExpr.h  CppModuleLoader.h  Environment.h  Evaluator.h  ExecutionContext.h  Executor.h  FastEvaluator.h  FastInterpreter.h  FastLoop.h  GMPWrapper.h  Interpreter.h  ModuleDef.h  ModuleManifest.h  ModuleRegistry.h  OptimizedEnvironment.h  OptimizedValue.h  Optimizer.h  RuntimeDiagnostics.h  TypeWrapper.h  Value.h  VariableAnalysis.h
src/headers/stdlib/: BobStdLib.h
src/runtime/: Evaluator.cpp  Executor.cpp  Interpreter.cpp
src/sources/builtinModules/: base64.cpp  eval.cpp  io.cpp  json.cpp  math.cpp  os.cpp  path.cpp  rand.cpp  register.cpp  sys.cpp  terminal.cpp  time.cpp
src/sources/cli/: bob.cpp  main.cpp
src/sources/common/: LineEditor.cpp  LineReader.cpp
src/sources/parsing/: ErrorReporter.cpp  Expression.cpp  Lexer.cpp  Parser.cpp
src/sources/runtime/: ClassRegistry.cpp  CppModuleLoader.cpp  Environment.cpp  Evaluator.cpp  Executor.cpp  ExtensionRegistry.cpp  FastLoop.cpp  FunctionRegistry.cpp  Interpreter.cpp  ModuleManifest.cpp  ModuleRegistry.cpp  RuntimeDiagnostics.cpp  TypeWrapper.cpp  Value.cpp  ValuePool.cpp  VariableAnalysis.cpp
src/sources/stdlib/: BobStdLib.cpp
tests/: debug_any_tag.bob  debug_inheritance.bob  debug_init_params.bob  debug_init_person.bob  debug_mixed_super.bob  debug_super_chain.bob  debug_super_min.bob  import_user_of_mod_hello.bob  mod_hello.bob  test_base64.bob  test_basic_class.bob  test_builtin_methods_style.bob  test_class_and_extension.bob  test_class_basic.bob  test_class_edge_cases.bob  test_class_extension_user.bob  test_class_inheritance.bob  test_class_init.bob  test_class_stress.bob  test_class_super.bob  test_class_with_this.bob  test_classes_comprehensive.bob  test_classes_extensive.bob  test_extension_methods.bob  test_extension_syntax.bob  test_hash.bob  test_imports_basic.bob  test_imports_builtin.bob  test_inc_property.bob  test_math.bob  test_method_calls.bob  test_os_basic.bob  test_overloading.bob  test_overloading_extensive.bob  test_path.bob  test_polymorphism.bob  test_polymorphism_practical.bob  test_rand.bob  test_random.bob  test_re.bob  (+12 more)
tools/: GenerateAST  GenerateAST.cpp  copy_sdk_minimal.sh
